# SafeBoard-Assignments

Client-Server-Application/: .gitignore  CMakeLists.txt  app.cpp  client.cpp  display_server.cpp  processing_server.cpp  processing_server.hpp  start_client.cpp  start_display_server.cpp  start_processing_server.cpp
Client-Server-Application/include/: client.hpp  display_server.hpp
Client-Server-Application/src/: client.cpp  display_server.cpp  processing_server.cpp  start_client.cpp  start_display_server.cpp  start_processing_server.cpp
Hash-Cracker/: main.cpp  thread_pool.cpp  thread_pool.hpp
Log-Parser/: CMakeLists.txt  logs_parser.cpp  logs_parser.hpp  main.cpp  tests.cpp
Logs-Parser/: CMakeLists.txt  logs_parser.cpp  logs_parser.hpp  main.cpp
